Feat/star identify (#29)
* feat: astronomy idl

* task: update idl

* modify the ignore

* add identify stars job works

* feat: create identify stars job

---------
