# gen/py/src/openapi_server/models/identify_stars_job_result.py
@@ -1,0 +1,104 @@
+# coding: utf-8
+
+"""
+    StarRoll API
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, Field
+from typing import Any, ClassVar, Dict, List, Optional
+from openapi_server.models.equatorial_coordinate import EquatorialCoordinate
+from openapi_server.models.identify_stars_job_result_identified_stars_inner import IdentifyStarsJobResultIdentifiedStarsInner
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class IdentifyStarsJobResult(BaseModel):
+    """
+    result of identify stars job
+    """ # noqa: E501
+    center: Optional[EquatorialCoordinate] = None
+    identified_stars: Optional[List[IdentifyStarsJobResultIdentifiedStarsInner]] = Field(default=None, description="List of identified stars in the image", alias="identifiedStars")
+    __properties: ClassVar[List[str]] = ["center", "identifiedStars"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of IdentifyStarsJobResult from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        # override the default output from pydantic by calling `to_dict()` of center
+        if self.center:
+            _dict['center'] = self.center.to_dict()
+        # override the default output from pydantic by calling `to_dict()` of each item in identified_stars (list)
+        _items = []
+        if self.identified_stars:
+            for _item in self.identified_stars:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['identifiedStars'] = _items
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of IdentifyStarsJobResult from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "center": EquatorialCoordinate.from_dict(obj.get("center")) if obj.get("center") is not None else None,
+            "identifiedStars": [IdentifyStarsJobResultIdentifiedStarsInner.from_dict(_item) for _item in obj.get("identifiedStars")] if obj.get("identifiedStars") is not None else None
+        })
+        return _obj
+
+
