# gen/ts/models/ApiListIdentifyStarsJobsPostRequest.ts
@@ -1,0 +1,116 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * StarRoll API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { UserCredentials } from './UserCredentials';
+import {
+    UserCredentialsFromJSON,
+    UserCredentialsFromJSONTyped,
+    UserCredentialsToJSON,
+    UserCredentialsToJSONTyped,
+} from './UserCredentials';
+
+/**
+ * 
+ * @export
+ * @interface ApiListIdentifyStarsJobsPostRequest
+ */
+export interface ApiListIdentifyStarsJobsPostRequest {
+    /**
+     * Maximum number of items to return
+     * @type {number}
+     * @memberof ApiListIdentifyStarsJobsPostRequest
+     */
+    limit?: number;
+    /**
+     * Number of items to skip (for pagination)
+     * @type {number}
+     * @memberof ApiListIdentifyStarsJobsPostRequest
+     */
+    offset?: number;
+    /**
+     * Field name to sort by
+     * @type {string}
+     * @memberof ApiListIdentifyStarsJobsPostRequest
+     */
+    sort?: string;
+    /**
+     * Sort order (ascending or descending)
+     * @type {string}
+     * @memberof ApiListIdentifyStarsJobsPostRequest
+     */
+    order?: ApiListIdentifyStarsJobsPostRequestOrderEnum;
+    /**
+     * 
+     * @type {UserCredentials}
+     * @memberof ApiListIdentifyStarsJobsPostRequest
+     */
+    userCredentials?: UserCredentials;
+}
+
+
+/**
+ * @export
+ */
+export const ApiListIdentifyStarsJobsPostRequestOrderEnum = {
+    Asc: 'asc',
+    Desc: 'desc'
+} as const;
+export type ApiListIdentifyStarsJobsPostRequestOrderEnum = typeof ApiListIdentifyStarsJobsPostRequestOrderEnum[keyof typeof ApiListIdentifyStarsJobsPostRequestOrderEnum];
+
+
+/**
+ * Check if a given object implements the ApiListIdentifyStarsJobsPostRequest interface.
+ */
+export function instanceOfApiListIdentifyStarsJobsPostRequest(value: object): value is ApiListIdentifyStarsJobsPostRequest {
+    return true;
+}
+
+export function ApiListIdentifyStarsJobsPostRequestFromJSON(json: any): ApiListIdentifyStarsJobsPostRequest {
+    return ApiListIdentifyStarsJobsPostRequestFromJSONTyped(json, false);
+}
+
+export function ApiListIdentifyStarsJobsPostRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiListIdentifyStarsJobsPostRequest {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'limit': json['limit'] == null ? undefined : json['limit'],
+        'offset': json['offset'] == null ? undefined : json['offset'],
+        'sort': json['sort'] == null ? undefined : json['sort'],
+        'order': json['order'] == null ? undefined : json['order'],
+        'userCredentials': json['userCredentials'] == null ? undefined : UserCredentialsFromJSON(json['userCredentials']),
+    };
+}
+
+export function ApiListIdentifyStarsJobsPostRequestToJSON(json: any): ApiListIdentifyStarsJobsPostRequest {
+    return ApiListIdentifyStarsJobsPostRequestToJSONTyped(json, false);
+}
+
+export function ApiListIdentifyStarsJobsPostRequestToJSONTyped(value?: ApiListIdentifyStarsJobsPostRequest | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'limit': value['limit'],
+        'offset': value['offset'],
+        'sort': value['sort'],
+        'order': value['order'],
+        'userCredentials': UserCredentialsToJSON(value['userCredentials']),
+    };
+}
+
