# gen/ts/models/IdentifyStarsJobResult.ts
@@ -1,0 +1,88 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * StarRoll API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { IdentifyStarsJobResultIdentifiedStarsInner } from './IdentifyStarsJobResultIdentifiedStarsInner';
+import {
+    IdentifyStarsJobResultIdentifiedStarsInnerFromJSON,
+    IdentifyStarsJobResultIdentifiedStarsInnerFromJSONTyped,
+    IdentifyStarsJobResultIdentifiedStarsInnerToJSON,
+    IdentifyStarsJobResultIdentifiedStarsInnerToJSONTyped,
+} from './IdentifyStarsJobResultIdentifiedStarsInner';
+import type { EquatorialCoordinate } from './EquatorialCoordinate';
+import {
+    EquatorialCoordinateFromJSON,
+    EquatorialCoordinateFromJSONTyped,
+    EquatorialCoordinateToJSON,
+    EquatorialCoordinateToJSONTyped,
+} from './EquatorialCoordinate';
+
+/**
+ * result of identify stars job
+ * @export
+ * @interface IdentifyStarsJobResult
+ */
+export interface IdentifyStarsJobResult {
+    /**
+     * 
+     * @type {EquatorialCoordinate}
+     * @memberof IdentifyStarsJobResult
+     */
+    center?: EquatorialCoordinate;
+    /**
+     * List of identified stars in the image
+     * @type {Array<IdentifyStarsJobResultIdentifiedStarsInner>}
+     * @memberof IdentifyStarsJobResult
+     */
+    identifiedStars?: Array<IdentifyStarsJobResultIdentifiedStarsInner>;
+}
+
+/**
+ * Check if a given object implements the IdentifyStarsJobResult interface.
+ */
+export function instanceOfIdentifyStarsJobResult(value: object): value is IdentifyStarsJobResult {
+    return true;
+}
+
+export function IdentifyStarsJobResultFromJSON(json: any): IdentifyStarsJobResult {
+    return IdentifyStarsJobResultFromJSONTyped(json, false);
+}
+
+export function IdentifyStarsJobResultFromJSONTyped(json: any, ignoreDiscriminator: boolean): IdentifyStarsJobResult {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'center': json['center'] == null ? undefined : EquatorialCoordinateFromJSON(json['center']),
+        'identifiedStars': json['identifiedStars'] == null ? undefined : ((json['identifiedStars'] as Array<any>).map(IdentifyStarsJobResultIdentifiedStarsInnerFromJSON)),
+    };
+}
+
+export function IdentifyStarsJobResultToJSON(json: any): IdentifyStarsJobResult {
+    return IdentifyStarsJobResultToJSONTyped(json, false);
+}
+
+export function IdentifyStarsJobResultToJSONTyped(value?: IdentifyStarsJobResult | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'center': EquatorialCoordinateToJSON(value['center']),
+        'identifiedStars': value['identifiedStars'] == null ? undefined : ((value['identifiedStars'] as Array<any>).map(IdentifyStarsJobResultIdentifiedStarsInnerToJSON)),
+    };
+}
+
